# pointcloud-mlops-pocket

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: predict.yaml  train.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: generate_and_view.py  train.py
src/pointcloud_mlops/: main_api.py
src/pointcloud_mlops/adapters/io/: artifact_store.py  dataset_loader.py
src/pointcloud_mlops/core/: features.py  metrics.py  model.py  plotly_viz.py  pointcloud_generator.py  schemas.py
src/pointcloud_mlops/services/: model_runtime.py
tests/integration/: test_api_predict.py
tests/unit/: test_features.py  test_generator.py
